deploy-oren.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      meta.helm.sh/release-name: simple-web
      meta.helm.sh/release-namespace: oren
    labels:
      app.kubernetes.io/instance: simple-web
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: simple-web
    name: simple-web
    namespace: oren
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: simple-web
        app.kubernetes.io/instance: simple-web
        app.kubernetes.io/name: simple-web
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: simple-web
          app.kubernetes.io/instance: simple-web
          app.kubernetes.io/name: simple-web
      spec:
        containers:
        - image: acrinterview.azurecr.io/simple-web:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: simple-web
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: oren-web
        serviceAccountName: oren-web
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2025-05-19T13:54:54Z"
      lastUpdateTime: "2025-05-19T13:54:54Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-05-19T13:54:52Z"
      lastUpdateTime: "2025-05-20T08:09:06Z"
      message: ReplicaSet "simple-web-777f7dc585" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 2
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
