ingress-oren.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      meta.helm.sh/release-name: simple-web
      meta.helm.sh/release-namespace: oren
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-05-19T13:11:33Z"
    generation: 7
    labels:
      app: simple-web
      app.kubernetes.io/instance: simple-web
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: simple-web
    name: simple-web
    namespace: oren
    resourceVersion: "88186701"
    uid: 5f2705ef-af38-46fa-b3bd-422703853b1a
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: simple-web
              port:
                number: 80
          path: /oren
          pathType: ImplementationSpecific
  status:
    loadBalancer:
      ingress:
      - ip: 10.224.0.4
kind: List
metadata:
  resourceVersion: ""
