test-oren.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: simple-web
    meta.helm.sh/release-namespace: oren
  creationTimestamp: "2025-05-19T13:11:33Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: simple-web
    app.kubernetes.io/name: simple-web
  name: simple-web
  namespace: oren
  resourceVersion: "87831553"
  uid: 176f9a20-5f6c-4ce4-b52c-b3bfb4124088
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: simple-web
      app.kubernetes.io/instance: simple-web
      app.kubernetes.io/name: simple-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-web
        app.kubernetes.io/instance: simple-web
        app.kubernetes.io/name: simple-web
    spec:
      containers:
      - image: acrinterview.azurecr.io/simple-web:latest
        imagePullPolicy: IfNotPresent
        name: simple-web
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-05-19T13:11:35Z"
    lastUpdateTime: "2025-05-19T13:11:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-05-19T13:11:33Z"
    lastUpdateTime: "2025-05-19T13:11:35Z"
    message: ReplicaSet "simple-web-5fb988dbf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
